@@ -4,6 +4,11 @@ mdcfg (1.02) UNRELEASED; urgency=low
     - mdcfg now works when d-i is running at priority critical. There didn't
       seem to be anything that could be left out, so I just changed all
       non-error questions to be asked at critical.
+  * Joey Hess
+    - Remove hack around bug 250427 in prebaseconfig, mdadm defaults to
+      autostart now.
+    - Create mdadm.cfg by running mdadm inside the /target chroot, as outside
+      the chroot it gets devfs device names in there and doesn't work.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 12 Aug 2004 14:41:39 +0100
 
